--- a/assets/custom.css
+++ b/assets/custom.css
@@ -11861,57 +11861,57 @@ textarea.form-control-lg {
   position: relative;
 }
 .competitor-comparison__heading {
-  font-size: 32px;
+  font-size: 2rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison__heading {
-    font-size: 56px;
+    font-size: 3.5rem;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 48rem) {
   .competitor-comparison__heading span {
     display: block;
   }
 }
 .competitor-comparison__tabs {
-  padding: 10px 16px;
-  border-radius: 150px;
+  padding: 0.625rem 1rem;
+  border-radius: 9.375rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   max-width: 90%;
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison__tabs {
     justify-content: space-between;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 75rem) {
   .competitor-comparison__tabs {
     max-width: 60%;
   }
 }
 .competitor-comparison__tab {
   display: inline-block;
-  padding: 0.3rem 0.8rem;
-  border-radius: 150px;
-  font-size: 10px;
+  padding: 0.1875rem 0.5rem;
+  border-radius: 9.375rem;
+  font-size: 0.625rem;
   color: var(--black);
   transition: background 0.3s, color 0.3s;
   font-weight: 600;
   border: none;
   background: var(--bs-white);
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison__tab {
     font-size: 1.2rem;
-    padding: 0.5rem 1.5rem;
+    padding: 0.3125rem 0.9375rem;
   }
 }
 .competitor-comparison__tab:hover {
   cursor: pointer;
 }
-@media (min-width: 767px) {
+@media (min-width: 47.9375rem) {
   .competitor-comparison__tab:first-child {
     order: 1;
   }
@@ -11925,20 +11925,20 @@ textarea.form-control-lg {
 .competitor-comparison__grid {
   display: none;
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison__grid {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 0.625rem;
     justify-content: center;
   }
 }
 .competitor-comparison .swiper-container {
   display: block;
   width: 100%;
-  padding: 1rem 0;
+  padding: 0.625rem 0;
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison .swiper-container {
     display: none;
   }
@@ -11951,58 +11951,58 @@ textarea.form-control-lg {
   margin: 0;
   align-items: center;
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison .swiper-slide {
     width: auto !important;
   }
 }
 .competitor-comparison__block {
   background: #fff;
-  border-radius: 12px;
+  border-radius: 0.75rem;
   padding: 1rem;
   flex: unset;
   width: 100%;
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison__block {
     flex: 1 1 calc(33.333% - 1rem);
-    max-width: 300px;
+    max-width: 18.75rem;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison__block:first-child {
     order: 1;
   }
 }
 .competitor-comparison__block:first-child .competitor-comparison__image {
-  rotate: 10deg;
+  transform: rotate(10deg) scale(0.9);
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison__block:nth-child(2) {
     order: 0;
   }
 }
 .competitor-comparison__block:nth-child(2) .competitor-comparison__image {
-  rotate: -20deg;
+  transform: rotate(-20deg) scale(0.9);
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison__block:last-child {
     order: 2;
   }
 }
 .competitor-comparison__block:last-child .competitor-comparison__image {
-  rotate: 10deg;
+  transform: rotate(10deg) scale(0.9);
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison__block.active .competitor-comparison__image {
-    transform: scale(1);
+    transform: scale(1) rotate(0deg);
   }
 }
 .competitor-comparison__image {
-  max-width: 160px;
+  max-width: 10rem;
   transform: scale(0.9);
   transition: transform 0.6s ease-in-out;
 }
@@ -12014,18 +12014,18 @@ textarea.form-control-lg {
   line-height: 2rem;
 }
 .competitor-comparison__price-item {
-  font-size: 18px;
+  font-size: 1.125rem;
   color: var(--dark-grey);
 }
 .competitor-comparison__price-total {
-  font-size: 32px;
+  font-size: 2rem;
   font-weight: 700;
   color: var(--bs-black);
 }
 .competitor-comparison__cta {
   background: var(--bs-black);
   color: var(--bs-white);
-  padding: 0.5rem 3rem;
+  padding: 0.3125rem 3rem;
   font-weight: 600;
 }
 .competitor-comparison__cta:hover {
@@ -12038,19 +12038,19 @@ textarea.form-control-lg {
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 0.625rem;
 }
 .competitor-comparison__features--positive .competitor-comparison__features-item::before {
   content: "✔";
   color: var(--bs-white);
   background: var(--grind-green);
   border-radius: 50%;
-  height: 26px;
-  width: 26px;
+  height: 1.625rem;
+  width: 1.625rem;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin-right: 10px;
+  margin-right: 0.625rem;
 }
 .competitor-comparison__features-item {
   position: relative;
@@ -12060,24 +12060,24 @@ textarea.form-control-lg {
   color: var(--bs-white);
   background: var(--grind-red);
   border-radius: 50%;
-  height: 26px;
-  width: 26px;
+  height: 1.625rem;
+  width: 1.625rem;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin-right: 10px;
+  margin-right: 0.625rem;
 }
 .competitor-comparison .swiper-button-next,
 .competitor-comparison .swiper-button-prev {
   color: var(--bs-black);
-  height: 24px;
-  width: 24px;
+  height: 1.5rem;
+  width: 1.5rem;
   background: var(--bs-white);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   top: 40%;
 }
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .competitor-comparison .swiper-button-next,
   .competitor-comparison .swiper-button-prev {
     display: none;
