--- a/src/styles/components/competitor-component.scss
+++ b/src/styles/components/competitor-component.scss
@@ -19,9 +19,9 @@
 
   &__tabs {
     padding: 0.625rem 1rem;
-    border-radius: 9.375rem;
+    border-radius: 150px;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     max-width: 90%;
 
@@ -37,9 +37,9 @@
   &__tab {
     display: inline-block;
     padding: 0.1875rem 0.5rem;
-    border-radius: 9.375rem;
+    border-radius: 150px;
     font-size: 0.625rem;
-    color: var(--black);
+    color: var(--bs-black);
     transition: background 0.3s, color 0.3s;
     font-weight: 600;
     border: none;
@@ -105,7 +105,6 @@
 
   &__block {
     background: #fff;
-    border-radius: 0.75rem;
     padding: 1rem;
     flex: unset;
     width: 100%;
@@ -124,7 +123,7 @@
       }
 
       .competitor-comparison__image {
-        transform: rotate(10deg) scale(0.9);
+        transform: rotate(-10deg) scale(0.9);
       }
     }
 
@@ -151,7 +150,7 @@
     &.active {
       .competitor-comparison__image {
         @media (min-width: 48rem) {
-          transform: scale(1) rotate(0deg);
+          transform: scale(1) rotate(20deg);
         }
       }
     }
